[10] Finish notes on point sprites

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -95,3 +95,60 @@ void main(void) {
         fragColor = vec4(luminance, luminance, luminance, frameColor.a);
 }
 ```
+
+## Point Sprites
+
+A **particle effect** is a generic term for any special effect created by rendering groups of particles (displayed as points, textured quads, or repeated geometry) that are difficult to represent by a single geometric model.
+
+One very efficient way of rendering particles is to use **point sprites**. You must render vertices with the [`POINTS`](../02/#drawelements-modes) primitive type, then each vertex will be rendered as a single pixel on screen.
+
+A point stype is created by setting the `gl_PointSize` value in the vertex shader. If it's set to a number greater than one, the point is rendered as a quad that always faces the screen (also known as a **billboard**). The quad is centered on the original point and has a width and height equal to the `gl_PointSize` in pixels:
+
+![Point Sprite](./assets/point_sprite.png)
+
+When the point sprite is rendered, it also generates texture coordinates for the quad, covering a simple $[0, 1]$ range from the upper left to the lower right:
+
+![Point Sprite Texture](./assets/point_sprite_texture.png)
+
+The texture coordinates are accessible in the fragment shader by the built-in `vec2 gl_PointCoord`. Combining these properties gives us a simple point sprite vertex shader that looks like this:
+
+```c
+#version 300 es
+
+precision mediump float;
+
+uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+uniform float uPointSize;
+
+in vec4 aParticle;
+
+out float vLifespan;
+
+void main(void) {
+  gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aParticle.xyz, 1.0);
+  
+  vLifespan = aParticle.w;
+  
+  gl_PointSize = uPointSize * vLifespan;
+}
+```
+
+The corresponding fragment shader looks like this:
+
+```c
+#version 300 es
+
+precision mediump float;
+
+uniform sampler2D uSampler;
+
+in float vLifespan;
+
+out vec4 fragColor;
+
+void main(void) {
+  vec4 texColor = texture(uSampler, gl_PointCoord);
+  fragColor = vec4(texColor.rgb, texColor.a * vLifespan);
+}
+```
