[RTGW] 10: finish notes on normal maps

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -127,9 +127,9 @@ out float vLifespan;
 
 void main(void) {
   gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aParticle.xyz, 1.0);
-  
+
   vLifespan = aParticle.w;
-  
+
   gl_PointSize = uPointSize * vLifespan;
 }
 ```
@@ -152,3 +152,17 @@ void main(void) {
   fragColor = vec4(texColor.rgb, texColor.a * vLifespan);
 }
 ```
+
+## Normal Mapping
+
+With **normal mapping**, the surface normals are replaced by normals that are encoded in a texture that give the appearance of a rough or bumpy surface. Note that the actual geometry is not changed when using a normal map – only how it's lit changes.
+
+![Normal Mapping](./assets/normal_mapping.png)
+
+The texture used to store the normals is called a **normal map**, and it's typically paired with a specific diffuse texture
+
+![Normal Map](./assets/normal_map.png)
+
+The normal map contains custom-formatted color information that can be interpreted by the shader at runtime as a **fragment normal**. A fragment normal is a three-component vector that points away from the surface. The normal texture encodes the three components of the normal vector into the three channels of the texture's texel color.
+
+The normals that have been encoded are typically stored in **tangent space**, as opposed to world or object space. Tangent space is the coordinate system for the texture coordinates of a face. Normal maps are commonly blue, since the normals they represent generally point away from the surface and thus have larger $z$ components.
