[RTGW] 10: add some information about tangent space

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -165,4 +165,60 @@ The texture used to store the normals is called a **normal map**, and it's typic
 
 The normal map contains custom-formatted color information that can be interpreted by the shader at runtime as a **fragment normal**. A fragment normal is a three-component vector that points away from the surface. The normal texture encodes the three components of the normal vector into the three channels of the texture's texel color.
 
-The normals that have been encoded are typically stored in **tangent space**, as opposed to world or object space. Tangent space is the coordinate system for the texture coordinates of a face. Normal maps are commonly blue, since the normals they represent generally point away from the surface and thus have larger $z$ components.
+### Tangent Space
+
+The normals that have been encoded are typically stored in **tangent space**, as opposed to world or object space.
+
+The tangent space is a special basis that is **attached to the surfacee**, so instead of using thw world's $x$, $y$ and $z$ we define the following three vectors:
+
+- **Normal vector**: the vector that is perpendicular to the surface in a given point
+- **Tangent vector**: the vector that is tangent (thus parallel) to the surface in a given point, by definition this vector is perpendicular to the normal vector.
+- **Bitangent or binormal vector**: the vector that is parallel to the surface and perpendicular to the tangent vector. This vector is also perpendicular to the normal vector.
+
+![Tangent Space](./assets/tangent_space.png)
+
+So, because the normals are defined on tangent space, if we want to use this normals on the [Phong](../03#phong-reflection-model) or [Lambertial light model](../03#lambertian-reflection-model), we have to transform whatever vectors (e.g. light direction vector, eye vector, etc.) from world space to tangent space.
+
+Note that each point on the surface is defined by an ordered basis:
+
+- **Tangent**: Defines the $X-axis$ with respect to the Tangent Space.
+- **Bitangent**: Defines the $Y-axis$ with respect to the Tangent Space.
+- **Normal**: Defines the $Z-axis$ with respect to the Tangent Space.
+
+As we have said before, these vectors are pairwise orthogonal and thus they form an **orthonormal basis** $\\{T, B, N\\}$ for the tangent space.
+
+#### Transforming a Vector from World Space to Tangent Space
+
+A vector $V_w$ in world space is defined as
+
+$$
+V_w = v_x i + v_y j + v_z k
+$$
+
+where $i, j, k$ are the world-space basis vectors. To express $V_w$ in tangent space we need to change the basis from the world basis $\\{i, j, k\\}$ to $\\{T, B, N\\}$. This is done by multiplying $V_w$ by the **TBN matrix**:
+
+$$
+TBN = \begin{bmatrix}
+T_x & B_x & N_x \\
+T_y & B_y & N_y \\
+T_z & B_z & N_z \\
+\end{bmatrix}
+$$
+
+Thus
+
+$$
+V_t = TBN^{-1} V_w
+$$
+
+Since $TBN$ is an **orthonormal matrix**, its inverse is just its transpose:
+
+$$
+TBN^{-1} = TBN^T
+$$
+
+Then
+
+$$
+V_t = TBN^T V_w
+$$
