[RTGW] 10: add more notes on tangent space

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -167,25 +167,15 @@ The normal map contains custom-formatted color information that can be interpret
 
 ### Tangent Space
 
-The normals that have been encoded are typically stored in **tangent space**, as opposed to world or object space.
+The normals that have been encoded are typically stored in **tangent space**, as opposed to world or object space. The tangent space is a special basis that is **attached to the surfacee**, so instead of using thw world's $x$, $y$ and $z$ we define the following three vectors:
 
-The tangent space is a special basis that is **attached to the surfacee**, so instead of using thw world's $x$, $y$ and $z$ we define the following three vectors:
-
-- **Normal vector**: the vector that is perpendicular to the surface in a given point
-- **Tangent vector**: the vector that is tangent (thus parallel) to the surface in a given point, by definition this vector is perpendicular to the normal vector.
-- **Bitangent or binormal vector**: the vector that is parallel to the surface and perpendicular to the tangent vector. This vector is also perpendicular to the normal vector.
+- **Tangent vector**: the vector that is tangent (thus parallel) to the surface in a given point, by definition this vector is perpendicular to the normal vector. Defines the $\text{x-axis}$ with respect to the Tangent Space.
+- **Bitangent or binormal vector**: the vector that is parallel to the surface and perpendicular to the tangent vector. This vector is also perpendicular to the normal vector. Defines the $\text{y-axis}$ with respect to the Tangent Space.
+- **Normal vector**: the vector that is perpendicular to the surface in a given point. Defines the $\text{z-axis}$ with respect to the Tangent Space.
 
 ![Tangent Space](./assets/tangent_space.png)
 
-So, because the normals are defined on tangent space, if we want to use this normals on the [Phong](../03#phong-reflection-model) or [Lambertial light model](../03#lambertian-reflection-model), we have to transform whatever vectors (e.g. light direction vector, eye vector, etc.) from world space to tangent space.
-
-Note that each point on the surface is defined by an ordered basis:
-
-- **Tangent**: Defines the $X-axis$ with respect to the Tangent Space.
-- **Bitangent**: Defines the $Y-axis$ with respect to the Tangent Space.
-- **Normal**: Defines the $Z-axis$ with respect to the Tangent Space.
-
-As we have said before, these vectors are pairwise orthogonal and thus they form an **orthonormal basis** $\\{T, B, N\\}$ for the tangent space.
+If we want apply the [Phong](../03#phong-reflection-model) or [Lambertian light model](../03#lambertian-reflection-model), we have to transform whatever vectors (e.g. light direction vector, eye vector, etc.) from world space to tangent space. In order to do this, first note that the tangent world is defined by the ordered basis formed by the **tangent vector**, the **bitangent vector** and the **normal vector**. These vectors are pairwise orthogonal and thus they form an **orthonormal basis** $\\{T, B, N\\}$ for the tangent space.
 
 #### Transforming a Vector from World Space to Tangent Space
 
@@ -195,17 +185,39 @@ $$
 V_w = v_x i + v_y j + v_z k
 $$
 
-where $i, j, k$ are the world-space basis vectors. To express $V_w$ in tangent space we need to change the basis from the world basis $\\{i, j, k\\}$ to $\\{T, B, N\\}$. This is done by multiplying $V_w$ by the **TBN matrix**:
+where $i, j, k$ are the world-space basis vectors. To express $V_w$ in tangent space we need to change the basis from the world basis $\\{i, j, k\\}$ to $\\{T, B, N\\}$. So, we want to express $V_w$ as:
 
 $$
-TBN = \begin{bmatrix}
+V_w = x' \textbf{T} + y' \textbf{B} + z'\textbf{N}
+$$
+
+That means we have to find the components $(x', y', z')$. This can be re-written as
+
+$$
+V_w =
+\begin{bmatrix}
+v_x \\
+v_y \\
+v_z \\
+\end{bmatrix} =
+\begin{bmatrix}
 T_x & B_x & N_x \\
 T_y & B_y & N_y \\
 T_z & B_z & N_z \\
+\end{bmatrix} \begin{bmatrix}
+x' \\
+y' \\
+z' \\
 \end{bmatrix}
 $$
 
-Thus
+That is
+
+$$
+V_w = TBN \cdot V_t
+$$
+
+Where $V_t$ is the vector in **tangent space**. Thus, if we solve for $V_t$
 
 $$
 V_t = TBN^{-1} V_w
@@ -214,11 +226,141 @@ $$
 Since $TBN$ is an **orthonormal matrix**, its inverse is just its transpose:
 
 $$
-TBN^{-1} = TBN^T
-$$
-
-Then
-
-$$
 V_t = TBN^T V_w
 $$
+
+### Normal Mapping on our Shaders
+
+So how do we translate these operations to our shaders. First of all we have to define the normals and the tangents for the geometry (i.e. the triangle) as attributes to our vertex shader (here we denote them as `aNormal` and `aTangent`). Also note we transform this vectors using the `uNormalMatrix` to apply the local transformations over the model.
+
+Next we use these two vectors to obtain the bitangent by computing their cross product, the result is stored on `bitangent`. With these three vectors we can now define our transformation matrix `tbnMatrix`.
+
+```c
+
+...
+
+uniform mat4 uModelViewMatrix;
+uniform mat4 uNormalMatrix;
+uniform mat4 uProjectionMatrix;
+
+in vec3 aNormal;
+in vec3 aTangent;
+
+...
+
+void main(void) {
+
+    ...
+
+    vec3 transformedNormal = vec3(uNormalMatrix * vec4(aNormal, 1.0));
+    vec3 tansformedTangent = vec3(uNormalMatrix * vec4(aTangent, 1.0));
+    vec3 bitangent = cross(transformedNormal, tansformedTangent);
+    mat3 tbnMatrix = mat3(
+      tansformedTangent.x, bitangent.x, transformedNormal.x,
+      tansformedTangent.y, bitangent.y, transformedNormal.y,
+      tansformedTangent.z, bitangent.z, transformedNormal.z
+    );
+
+    ...
+}
+```
+
+From here on we can use the `tbnMatrix` to transform the light direction vector (denoted `lightRay`) and the eye direction vector (denote `eyeRay`). As you can see we store the resulting values as varyings so they can be interpolated and used on the fragment shader, as we'll see later.
+
+```c
+
+...
+
+uniform mat4 uModelViewMatrix;
+uniform mat4 uNormalMatrix;
+uniform mat4 uProjectionMatrix;
+
+uniform vec3 uLightPosition;
+
+in vec3 aPosition;
+
+...
+
+void main(void) {
+    vec4 vertex = uModelViewMatrix * vec4(aPosition, 1.0);
+
+    ...
+
+    vec3 lightRay = vertex.xyz - uLightPosition;
+    vec3 eyeRay = -vertex.xyz;
+
+    vTangentLightRay = lightRay * tbnMatrix;
+    vTangentEyeRay = eyeRay * tbnMatrix;
+
+    ...
+}
+```
+
+The last things needed are the usual, we compute the vertex position by multipliying by the projection matrix and we also store the texture coordinates as a varying:
+
+```c
+
+...
+
+in vec2 aTextureCoords;
+
+...
+
+void main(void) {
+
+    ...
+
+    vTextureCoords = aTextureCoords;
+
+    gl_Position = uProjectionMatrix * vertex;
+
+    ....
+}
+```
+
+On our fragment shader we use the transformed ligth ray as well as the transformed eye ray to apply both the [Phong](../03#phong-reflection-model) and the [Lambertian light model](../03#lambertian-reflection-model).
+
+```c
+#version 300 es
+
+precision mediump float;
+
+const float SHININESS = 8.0;
+
+uniform sampler2D uSampler;
+uniform sampler2D uNormalSampler;
+
+uniform vec4 uLightDiffuse;
+uniform vec4 uLightAmbient;
+uniform vec4 uMaterialAmbient;
+
+in vec2 vTextureCoords;
+in vec3 vTangentLightRay;
+in vec3 vTangentEyeRay;
+
+out vec4 fragColor;
+
+// Transforms the normal stored inside the texture from a range of [0, 1] to a range of [-1, 1]
+vec3 transformNormal() {
+  return 2.0 * (texture(uNormalSampler, vTextureCoords).rgb - 0.5);
+}
+
+void main(void) {
+
+  // Ambient color
+  vec4 Ia = uLightAmbient * uMaterialAmbient;
+
+  // Diffuse color
+  vec4 textureColor = texture(uSampler, vTextureCoords);
+  vec3 N = normalize(transformNormal());
+  vec3 L = normalize(vTangentLightRay);
+  float lambertTerm = dot(N, -L);
+  vec4 Id = textureColor * uLightDiffuse * lambertTerm;
+
+  // Specular color
+  vec3 R = reflect(-L, N);
+  float Is = pow(clamp(dot(R, vTangentEyeRay), 0.0, 1.0), SHININESS);
+
+  fragColor = Ia + Id + Is;
+}
+```
