[RTGW] 10: finish notes on how to compute the tangents

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -364,3 +364,53 @@ void main(void) {
   fragColor = Ia + Id + Is;
 }
 ```
+
+### Compute Tangents
+
+As we have said, our tangent space is defined by three vectors: the **normal vector**, the **bitangent vector** and the **tangent vector**. The normal vector is defined by the vertices, the bitangent vector is defined as the cross product of the normal vector and the tangent vector. But where does the tangent vector come from?
+
+First of all, for every 3D vertex there is infinite tangent and bitangent vectors, as the following image shows there exists in fact a tangent plane.
+
+![Tangent plane](./assets/tangent_plane.png)
+
+So in order to properly calculate the most useful tangent space, we want our tangent space to be aligned such that the $x$ axis (the tangent) corresponds to the $u$ direction in the normal map and the $y$ axis (bitangent) corresponds to the $v$ direction in the normal map. See the following image
+
+![Tangent plane](./assets/best_tangent.png)
+
+We will assume $T$ is the tangent and $B$ is the bitangent, and $P_0$ is our target vertex, that is part of the triangle ($P_0$,$P_1$,$P_2$). We want to calculate the tangent and bitangent such that:
+
+- $T$ is alidned with $u$ and $B$ is aligned with $v$
+- $T$ and $B$ lay in the tangent plane.
+
+The point is we already assumed that $T$ and $B$ lay in the same plane and corresponds to $U$ and $V$ now if we can know their values we can cross product and the third vector to construct a transformation matrix from world to tangent space.
+
+![Aligned Tangent](./assets/aligned_tangent.png)
+
+Given that we know that any 2D vector can be written as a linear combination of two independent vectors and since we already have the triangle points (edges), shown in the above image. We can write:
+
+$$
+E_1 = (u_1 - u_0)T + (v_1 - v_0) B
+$$
+
+$$
+E_2 = (u_2 - u_0)T + (v_2 - v_0)B
+$$
+
+The above equation can be written in a matrix form,
+
+$$
+\begin{bmatrix}
+E_{1x} & E_{1y} & E_{1z} \\
+E_{2x} & E_{2y} & E_{2z} \\
+\end{bmatrix} =
+\begin{bmatrix}
+\Delta u_1 & \Delta v_1 \\
+\Delta u_2 & \Delta v_2
+\end{bmatrix}
+\begin{bmatrix}
+T_x & T_y & T_z \\
+B_x & B_y & B_z
+\end{bmatrix}
+$$
+
+By solving the matrixs equation we can determine $T$ and $B$ values we can construct a transformation matrix.
