[RTGW] 10: fix typos

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -358,7 +358,7 @@ void main(void) {
   vec4 Id = textureColor * uLightDiffuse * lambertTerm;
 
   // Specular color
-  vec3 R = reflect(-L, N);
+  vec3 R = reflect(L, N);
   float Is = pow(clamp(dot(R, vTangentEyeRay), 0.0, 1.0), SHININESS);
 
   fragColor = Ia + Id + Is;
