[RTGW] 10: finish ray tracing

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -414,3 +414,13 @@ B_x & B_y & B_z
 $$
 
 By solving the matrixs equation we can determine $T$ and $B$ values we can construct a transformation matrix.
+
+## Ray Tracing
+
+Thus far, all of our rendering has been done with **polygon rasterization**, which is the technical term for the triangle-based rendering that WebGL incorporates. **Ray tracing** is an alternate rendering technique that traces the path of light through a scene as it interacts with mathematically defined geometry.
+
+Ray tracing has several advantages, it creates more realistic scenes due to a more accurate lighting model. That said, ray tracing tends to be considerably slower than polygonal rendering.
+
+Ray tracing a scene is achieved by creating a series of rays that start at the camera's location and pass through each pixel in the viewport. These rays are then tested against every object in the scene to determine whether there are any intersections. If an intersection occurs, the closest intersection to the ray origin is returned, determining the color of the rendered pixel:
+
+![Ray Tracing](./assets/ray_tracing.png)
