[RTGW] 12: add testing section

--- a/content/cs/rtgw/10.md
+++ b/content/cs/rtgw/10.md
@@ -571,3 +571,11 @@ void main(void) {
   fragColor = vec4(rayColor, 1.0);
 }
 ```
+
+## Testing WebGL Applications
+
+Image comparisons of various application states throughout the development cycle is a common approach for testing WebGL applications. This technique, often referred to as visual regression testing, performs front-end or user-interface regression testing by capturing the screenshots of web pages/UI and comparing them with the original images.
+
+![Visual Regression Testing](./assets/visual_regression_testing.png)
+
+In the previous screenshot, you can see how the Baseline and Change are different via the final Diff output. This technique can be an effective approach for ensuring that your WebGL application continues to behave as expected.
